# switchbot-exporter

./: .env.example  Cargo.toml  Dockerfile  Makefile.toml  README.md  Rocket.toml  build-push.sh  compose.yml
.github/workflows/: release.yml
example/: .env.example  compose.yml
src/: infrastructure.rs  main.rs  route.rs  use_case.rs
src/domain/: switchbot.rs
src/domain/state/: switchbot.rs
src/domain/switchbot/: get_devices.rs  get_devices_status.rs
src/infrastructure/: prometheus.rs
src/infrastructure/api/: switchbot.rs
src/infrastructure/api/switchbot/: client.rs
src/infrastructure/env/: switchbot.rs
src/route/: exporter.rs  status.rs
src/service/: scheduler.rs
src/use_case/: scheduler.rs  switchbot.rs
