[package]
name = "switchbot-exporter"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.4"
chrono = "0.4.30"
clokwerk = "0.4.0"
crossbeam-channel = "0.5.8"
ctrlc = { version = "3.4.0", features = ["termination"] }
futures = "0.3.28"
prometheus = "0.13.3"
reqwest = { version = "0.11.20", features = ["json"] }
ring = "0.16.20"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = "1.0.188"
serde_json = "1.0.106"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }
