[package]
name = "switchbot-exporter"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
chrono = "0.4.31"
clokwerk = "0.4.0"
crossbeam-channel = "0.5.8"
ctrlc = { version = "3.4.1", features = ["termination"] }
futures = "0.3.29"
prometheus = "0.13.3"
reqwest = { version = "0.11.22", features = ["json"] }
ring = "0.16.20"
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.193"
serde_json = "1.0.108"
thiserror = "1.0.51"
tokio = { version = "1.35.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
