[package]
name = "switchbot-exporter"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
base64 = "0.21.6"
chrono = "0.4.31"
clokwerk = "0.4.0"
crossbeam-channel = "0.5.11"
ctrlc = { version = "3.4.2", features = ["termination"] }
futures = "0.3.30"
prometheus = "0.13.3"
reqwest = { version = "0.11.23", features = ["json"] }
ring = "0.16.20"
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.195"
serde_json = "1.0.109"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
